fix camera issue

--- a/index.html
+++ b/index.html
@@ -1,50 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Green Glory - Future of Sustainable Security | Paper, Printing & Security
+      Services
+    </title>
+    <meta
+      name="description"
+      content="Revolutionary paper, printing, and security services powered by next-generation technology and environmental innovation. Pioneering sustainable business solutions."
+    />
+    <meta
+      name="keywords"
+      content="green paper, sustainable printing, eco-friendly security, government tenders, FSC certified, environmental services"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Green Glory - Future of Sustainable Security | Paper, Printing & Security Services</title>
-  <meta name="description" content="Revolutionary paper, printing, and security services powered by next-generation technology and environmental innovation. Pioneering sustainable business solutions." />
-  <meta name="keywords" content="green paper, sustainable printing, eco-friendly security, government tenders, FSC certified, environmental services" />
-  
-  <!-- Force browser to reload everything -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-  <meta http-equiv="Pragma" content="no-cache" />
-  <meta http-equiv="Expires" content="0" />
-</head>
+    <!-- Force browser to reload everything -->
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+  </head>
 
-<body>
-  <div id="root">
-    <!-- Loading fallback -->
-    <div style="
-      display: flex; 
-      justify-content: center; 
-      align-items: center; 
-      height: 100vh; 
-      background: linear-gradient(135deg, #0a0a1a, #1a1a2e); 
-      color: white; 
-      font-family: system-ui;
-      text-align: center;
-    ">
-      <div>
-        <h1 style="font-size: 3rem; margin-bottom: 1rem; background: linear-gradient(135deg, #00ffff, #008080); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Green Glory</h1>
-        <div style="color: #64ffda; margin: 1rem 0;">
-          <div style="border: 3px solid rgba(0, 255, 255, 0.1); border-top: 3px solid #00ffff; border-radius: 50%; width: 40px; height: 40px; animation: spin 1s linear infinite; margin: 0 auto;"></div>
+  <body>
+    <div id="root">
+      <!-- Loading fallback -->
+      <div
+        style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+          background: linear-gradient(135deg, #0a0a1a, #1a1a2e);
+          color: white;
+          font-family: system-ui;
+          text-align: center;
+        "
+      >
+        <div>
+          <h1
+            style="
+              font-size: 4rem;
+              margin-bottom: 1rem;
+              background: linear-gradient(135deg, #00ffff, #008080);
+              -webkit-background-clip: text;
+              background-clip: text;
+              -webkit-text-fill-color: transparent;
+            "
+          >
+            Green Glory
+          </h1>
+          <div style="color: #64ffda; margin: 1rem 0">
+            <div
+              style="
+                border: 3px solid rgba(0, 255, 255, 0.1);
+                border-top: 4px solid #00ffff;
+                border-radius: 50%;
+                width: 40px;
+                height: 40px;
+                animation: spin 1s linear infinite;
+                margin: 0 auto;
+              "
+            ></div>
+          </div>
+          <p style="color: #999; font-size: 1rem">Loading application...</p>
         </div>
-        <p style="color: #999; font-size: 1rem;">Loading application...</p>
       </div>
     </div>
-  </div>
-  
-  <style>
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-  </style>
-  
-  <script type="module" src="/src/main.tsx"></script>
-</body>
 
+    <style>
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
+
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
